# adv_mla_lab_1

./: Makefile  pyproject.toml  requirements.txt
docs/: mkdocs.yml
models/: linear_poly_2.joblib  ohe.joblib  scaler.joblib
notebooks/: 1_baseline.ipynb  2_linear_poly.ipynb
